Before messing around with moving yaml